--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "description": "Landing page for Natours",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "devCompile:sass": "node-sass sass/main.scss css/style.css -w",
+    "devServer": "live-server",
+    "devStart": "npm-run-all --parallel devCompile:sass devServer",
+    "buildCompile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/style.comp.css css/icon-font.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css - o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.min.css --output-style compressed",
+    "build:css": "npm-run-all buildCompile:sass concat:css prefix:css compress:css"
   },
   "author": "Alexander",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^5.0.0"
+    "autoprefixer": "^10.2.4",
+    "concat": "^1.0.3",
+    "live-server": "^1.2.1",
+    "node-sass": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.3.1"
   },
   "dependencies": {}
 }
